# PGAM

./: .dockerignore  .gitignore  1d_var2_knot.h5  1d_var3_knot.h5  1d_var_knot.h5  Dockerfile  LICENSE.md  PGAM Tutorial.ipynb  PGAM_Tutorial.ipynb  Readme.md  Standardized PGAM Fit with examples.ipynb  Standardized_PGAM_Fit_with_examples.ipynb  Tutorial_AIC_and_DirectREML.ipynb  beta_filter_bank.npy  demo_corr_traces.py  demo_fit.py  demo_fit_example_smoothing.py  demo_fit_figsPres.py  island_col_mask_demo.ipynb  pgam.yml  pyproject.toml  requirements.txt  requirements_GAM_Repo.txt  run_jupyter.sh  setup.py  sh_template.sh  spat_and_temp_filt.dill  temporal_filter.npy
.ipynb_checkpoints/: PGAM Tutorial-checkpoint.ipynb
Akis/: 8ar_path_dict.py  create_mat_out.py  fit_with_cluster.py  full_model_fit_local.py
GAM_library/: 1d_var2_knot.h5  1d_var3_knot.h5  1d_var_knot.h5  GAM_library.py  build_cython.py  build_cython_kron.py  der_wrt_smoothing.py  deriv_det_Slam.py  fast_summations.c  gam_data_handlers.py  kron_cython.c  merge_sim_res.py  neg_weights_WLS.py  newton_optim.py  post_processing.py  spline_basis_toolbox.py
Ipshita/: compare_fit.py  description.rtf  fit_session.py  fit_session_cluster.py  fit_utils.py  highDens_fit_session.py  highDens_fit_session_cluster.py  lowDens_fit_session.py  lowDens_fit_session_cluster.py  medDens_fit_session_cluster.py  plot_utils.py
JP/: GAM_Step1.m  JOB_0_job_id_12_error.txt  JOB_0_job_id_4_error.txt  JOB_0_job_id_5_error.txt  JOB_102_job_id_101_error.txt  JOB_105_job_id_104_error.txt  JOB_106_job_id_105_error.txt  JOB_107_job_id_106_error.txt  JOB_108_job_id_107_error.txt  JOB_10_job_id_9_error.txt  JOB_111_job_id_110_error.txt  JOB_112_job_id_111_error.txt  JOB_114_job_id_113_error.txt  JOB_11_job_id_10_error.txt  JOB_125_job_id_124_error.txt  JOB_126_job_id_125_error.txt  JOB_141_job_id_140_error.txt  JOB_143_job_id_142_error.txt  JOB_144_job_id_143_error.txt  JOB_150_job_id_149_error.txt  JOB_155_job_id_154_error.txt  JOB_158_job_id_157_error.txt  JOB_163_job_id_162_error.txt  JOB_165_job_id_164_error.txt  JOB_16_job_id_15_error.txt  JOB_175_job_id_174_error.txt  JOB_179_job_id_178_error.txt  JOB_182_job_id_181_error.txt  JOB_183_job_id_182_error.txt  JOB_1_job_id_0_error.txt  JOB_214_job_id_213_error.txt  JOB_222_job_id_221_error.txt  JOB_224_job_id_223_error.txt  JOB_226_job_id_225_error.txt  JOB_228_job_id_227_error.txt  JOB_231_job_id_230_error.txt  JOB_234_job_id_233_error.txt  JOB_238_job_id_237_error.txt  JOB_243_job_id_242_error.txt  JOB_244_job_id_243_error.txt  (+101 more)
PGAM/: deriv_det_Slam.py  info_gain_units.xlsx  kron_cython.pyx  newton_optim.py  post_processing.py  postprocessing_utils.py
Plotting/: Presentation1.pptx  plot_example_jp.py  plot_example_jp_allVar.py  plot_example_jp_allr.py  plot_example_radPath.py  plot_psth_and_LFP_aligned.py  plot_tuning_example.py  plt_coupling_x_dist.py  plt_coupling_x_dist_polyregr.py  test_stability_fit_controlgain_noOdd.py  test_stability_fit_controlgain_odd.py
TMP/: check_fitst_results.py  check_rad_path.py  delete_concateneted_mat.py  extract_parameters.py  plot_fitCompare_radPath.py  tmp_knots_constructor.py  todo_fits.txt
analyzing/: DBSCAN_clustering.py  (+4 more)
(+383 files in other folders)
